# Copyright (C) 2008-2013 Assaf Gordon <assafgordon@gmail.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = reconf configure README install_galaxy_files.sh

SUBDIRS = m4 src doc galaxy scripts build_scripts

ACLOCAL_AMFLAGS = -I m4

AUTOMAKE_OPTIONS = dist-bzip2 no-dist-gzip

