# Copyright (C) 2008 Assaf Gordon <gordon@cshl.edu>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

bin_SCRIPTS = fastx_barcode_splitter.pl \
	      fastx_nucleotide_distribution_graph.sh \
	      fastx_nucleotide_distribution_line_graph.sh \
	      fastq_quality_boxplot_graph.sh \
	      fasta_clipping_histogram.pl

EXTRA_DIST = fastx_barcode_splitter.pl \
	      fastx_nucleotide_distribution_graph.sh \
	      fastx_nucleotide_distribution_line_graph.sh \
	      fastq_quality_boxplot_graph.sh \
	      fasta_clipping_histogram.pl
