# Copyright (C) 2008 Assaf Gordon <gordon@cshl.edu>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

SUBDIRS = libfastx \
	fastx_clipper \
	fastx_clipper_v3 \
	fastx_trimmer \
	fastx_quality_stats \
	fastq_quality_converter \
	fastq_to_fasta \
	fastq_quality_filter \
	fastq_quality_trimmer \
	fastx_artifacts_filter \
	fastx_reverse_complement \
	fastx_collapser \
	fastx_uncollapser \
	seqalign_test \
	fasta_formatter \
	fasta_nucleotide_changer \
	fastx_renamer \
	fastx_type_detect \
	fastq_masker \
	fastx_id_filter \
	fastx_reader_writer_test \
	fastxpe_reader_writer_test \
	fastqpe_quality_filter \
	fastxpe_to_tabular \
	fastxpe_from_tabular \
	speed_test



