# Copyright (C) 2008-2013 Assaf Gordon <assafgordon@gmail.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

SUBDIRS = libfastx \
	fastx_clipper \
	fastx_trimmer \
	fastx_quality_stats \
	fastq_quality_converter \
	fastq_to_fasta \
	fastq_quality_filter \
	fastq_quality_trimmer \
	fastx_artifacts_filter \
	fastx_reverse_complement \
	fastx_collapser \
	fastx_uncollapser \
	seqalign_test \
	fasta_formatter \
	fasta_nucleotide_changer \
	fastx_renamer \
	fastq_masker



