# Copyright (C) 2008 Assaf Gordon <gordon@cshl.edu>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = fastq_qual_conv1a.out \
	fastq_qual_conv1.fastq \
	fastq_qual_conv1.out \
	fastq_qual_conv2.fastq \
	fastq_qual_conv2n.out \
	fastq_qual_conv2.out \
	fastq_qual_filter1a.out \
	fastq_qual_filter1b.out \
	fastq_qual_filter1.fastq \
	fastq_stats1.fastq \
	fastq_stats1.out \
	fastq_to_fasta1a.out \
	fastq_to_fasta1b.out \
	fastq_to_fasta1.fastq \
	fastx_artifacts1.fasta \
	fastx_artifacts1.out \
	fastx_artifacts2.fastq \
	fastx_artifacts2.out \
	fastx_clipper1a.out \
	fastx_clipper1.fastq \
	fastx_rev_comp1.fasta \
	fastx_rev_comp2.fastq \
	fastx_reverse_complement1.out \
	fastx_reverse_complement2.out \
	fastx_trimmer1.fasta \
	fastx_trimmer1.out \
	fastx_trimmer2.fastq \
	fastx_trimmer2.out \
	fasta_collapser1.fasta \
	fasta_collapser1.out \
	fastx_barcode_splitter1.fastq \
	fastx_barcode_splitter1.txt \
	fastx_barcode_splitter1.out \
	fasta_formatter1.fasta \
	fasta_formatter1.out \
	fasta_formatter2.out \
	fasta_nuc_changer1.fasta \
	fasta_nuc_changer1.out \
	fasta_nuc_changer2.fasta \
	fasta_nuc_changer2.out


