# Copyright (C) 2008 Assaf Gordon <gordon@cshl.edu>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = fastx_clipper_example.png \
	     fastx_clipper_illustration.png \
	     barcode_splitter_output_example.png \
	     fastq_nucleotides_distribution_1.png \
	     fastq_nucleotides_distribution_2.png \
	     fastq_nucleotides_distribution_3.png \
	     fastq_nucleotides_distribution_4.png \
	     fastq_nucleotides_distribution_line_graph.png \
	     fasta_clipping_histogram_1.png \
	     fasta_clipping_histogram_2.png \
	     fasta_clipping_histogram_3.png \
	     fasta_clipping_histogram_4.png \
	     fastq_quality_boxplot_1.png \
	     fastq_quality_boxplot_2.png \
	     fastq_quality_boxplot_3.png
