# Copyright (C) 2008 Assaf Gordon <gordon@cshl.edu>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = fastq_quality_converter.xml \
	fastq_quality_filter.xml \
	fastx_quality_statistics.xml \
	fastq_to_fasta.xml \
	fastx_artifacts_filter.xml \
	fastx_clipper.xml \
	fastx_reverse_complement.xml \
	fastx_trimmer.xml \
	fastx_renamer.xml \
	fastx_barcode_splitter.xml fastx_barcode_splitter_galaxy_wrapper.sh \
	fastx_nucleotides_distribution.xml \
	fastq_quality_boxplot.xml \
	fasta_clipping_histogram.xml \
	fastx_collapser.xml \
	fasta_formatter.xml \
	fasta_nucleotide_changer.xml \
	fastq_quality_trimmer.xml \
	fastx_trimmer_from_end.xml \
	fastx_uncollapser.xml \
	seqid_uncollapser.xml \
	fastx_nucleotides_distribution_line.xml \
	fastq_masker.xml

