# Copyright (C) 2008 Assaf Gordon <gordon@cshl.edu>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = fastq_qual_conv.xml \
	fastq_quality_filter.xml \
	fastq_qual_stat.xml \
	fastq_to_fasta.xml \
	fastx_artifacts_filter.xml \
	fastx_clipper.xml \
	fastx_reverse_complement.xml \
	fastx_trimmer.xml \
	fastx_barcode_splitter.xml \
	fastq_nucleotides_distribution.xml \
	fastq_quality_boxplot.xml \
	fasta_clipping_histogram.xml \
	fasta_collapser.xml
